# Cobbler

./: .gitignore  Cargo.toml  Justfile  README.md  com.github.hanthor.Cobbler.json  meson.build  out.txt  test.txt
build-aux/: com.github.hanthor.Cobbler.json
data/: com.github.hanthor.Cobbler.desktop.in  com.github.hanthor.Cobbler.gschema.xml  com.github.hanthor.Cobbler.metainfo.xml.in  com.github.hanthor.Cobbler.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.rs  cobbler-application.c  cobbler-application.h  cobbler-window.c  cobbler-window.h  cobbler-window.ui  cobbler.gresource.xml  config.rs  flasher.rs  main.c  main.rs  meson.build  resources.gresource.xml  shortcuts-dialog.blp  utils.rs  window.blp  window.rs
src/ui/: window.blp  window.ui
src/widgets/: device_list.rs
