[package]
name = "cobbler"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.10", package = "gtk4", features = ["gnome_47"] }
adw = { version = "0.8", package = "libadwaita", features = ["v1_6"] }
udisks = { package = "udisks2", version = "0.3.1" }
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gettext-rs = "0.7"
log = "0.4"
env_logger = "0.10"
gio = { version = "0.21", features = ["v2_76"] }
uuid = { version = "1.11", features = ["v4"] }
tempfile = "3.14"
futures = "0.3"
glib = "0.21"

[build-dependencies]
glib-build-tools = "0.18"

[features]
default = []
